correct z-index

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -419,4 +419,5 @@ body {
   width: 200px;
   color: black;
   background-color: white;
+  z-index: 100;
 }
